<resources>
    <string name="app_name">End Portal Seeker</string>

    <!-- Admob -->
    <string name="app_id" translatable="false">ca-app-pub-4193046598871025~1742207292</string>
    <string name="native_ad_id" translatable="false">ca-app-pub-4193046598871025/5410823710</string>
    <string name="app_launch_ad" translatable="false">ca-app-pub-4193046598871025/5006950297</string>
    <string name="banner_ad" translatable="false">ca-app-pub-4193046598871025/1806071883</string>
    <string name="test_banner_ad" translatable="false">ca-app-pub-3940256099942544/6300978111</string>

    <!--URLs-->
    <string name="source_code_url" translatable="false">https://github.com/JVMFrog/end-portal-coords</string>
    <string name="crowdin_project_url" translatable="false">https://crwd.in/end-portal-finder</string>
    <string name="kirill_url" translatable="false">https://github.com/KirboGames</string>
    <string name="ibragim_url" translatable="false">https://github.com/IbremMiner837</string>
    <string name="JVMFrog" translatable="false">https://vk.com/jvmfrog</string>
    <string name="GOOGLE_PLAY" translatable="false">https://play.google.com/store/apps/dev?id=8551876312630719902</string>

    <!-- Java Calculator -->
    <string name="java_first_step">Enter the first XZ coordinates and throw angle</string>
    <string name="java_second_step">Enter the second XZ coordinates and throw angle</string>
    <string name="calculate_coordinates">Calculate Coordinates</string>
    <string name="to">-180 to 180</string>
    <string name="too">-999999999 to 999999999</string>

    <!--Bedrock Calculator-->
    <string name="bedrock_warning">Please note that due to the fact that in Bedrock Edition
     there is no way to get the angle of the throw, the coordinates may not be accurate!</string>
    <string name="bedrock_first_step">Enter current coordinates</string>
    <string name="bedrock_second_step">Enter second coordinates</string>
    <string name="bedrock_third_step">Enter the third coordinates</string>
    <string name="bedrock_fourth_step">Enter fourth coordinates</string>

    <string name="eye_of_ender_says">The All-Seeing Eye of Ender, says that the Portal to the End is located at the coordinates:</string>

    <!-- Steps, switch, error's and text input -->
    <string name="next_step">Next Step</string>
    <string name="again">Again</string>
    <string name="step_one">Step 1</string>
    <string name="step_two">Step 2</string>
    <string name="step_third">Step 3</string>
    <string name="step_fourth">Step 4</string>
    <string name="done">Done</string>

    <string name="switch_to_bedrock" translatable="false">Bedrock</string>
    <string name="switch_to_java" translatable="false">Java</string>

    <string name="error">Error</string>
    <string name="angleEqualException">Angles cannot be equal</string>
    <string name="angleOppositeException">Angles cannot be opposite</string>
    <string name="check_all_fields">Check if all fields are filled</string>

    <string name="x_coord">X Coordinate</string>
    <string name="y_coord">Y Coordinate</string>
    <string name="z_coord">Z Coordinate</string>
    <string name="throw_angle">Throw Angle</string>

    <!-- Guide throw angle and coordinates -->
    <string name="guide">Guide</string>
    <string name="skip">Skip</string>
    <string name="java_guide_title_debug_menu">Debug Menu</string>
    <string name="java_guide_title_where_are_coords_and_angle_throw">Where can I find the coordinates and angle throw</string>
    <string name="java_guide_title_coords_xz">Coordinates X and Z</string>
    <string name="java_guide_title_throw_angle">Angle Throw</string>
    <string name="java_guide_key_f">On the keyboard, press the "F3" key to open the debug menu</string>
    <string name="java_guide_if_debug_menu_opened">If you have something like this, you are on the right track</string>
    <string name="java_guide_coords_xz">X and Z coordinates can be found on the 9th line</string>
    <string name="java_guide_throw_angle">Throw Angle can be found on line 12</string>

    <!-- About App -->
    <string name="about_app">About App</string>
    <string name="develops">Develops:</string>
    <string name="ibragim_maltsagov">Ibragim Maltsagov</string>
    <string name="kirill_borisenko">Kirill Borisenko</string>
    <string name="version">Version</string>
    <string name="source_code">Source Code</string>
    <string name="translate">Translate</string>
    <string name="help_in_app_translation">The app doesn\'t have your language? Or do you want to help translate the application into other languages? Then I invite you to take part in the translation of the application into other languages</string>
    <string name="translate_application">Translate Application</string>
    <string name="app_logo" translatable="false">App Logo</string>
    <string name="thank_for_review">Thanks for the review</string>
    <string name="we_are_on_vk">We are on VK</string>
    <string name="other_apps">Other Apps</string>

    <!-- Navigation Bar -->
    <string name="calculator">Calculator</string>
    <string name="coordinates">Coordinates</string>

    <!-- Save Coordinates -->
    <string name="save_coordinates">Save Coordinates</string>
    <string name="saving_coordinates">Saving Coordinates</string>
    <string name="coordinates_removed">Coordinates Removed</string>
    <string name="its_empty_save_coordinates_so_it_appears_here">Oops, it\'s empty here, save the coordinates so it appears here.</string>
    <string name="enter_a_name_for_coordinates">Please enter a name for the coordinates</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <string name="java_calculator" translatable="false">Java Calculator</string>
    <string name="bedrock_calculator" translatable="false">Bedrock Calculator</string>
    <string name="nether_calculator" translatable="false">Nether Calculator</string>
    <string name="settings" translatable="false">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>