<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:src="@mipmap/ic_launcher"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:layout_gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/app_name"
                            android:textSize="21sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="JVMFrog"
                            android:textSize="21sp"
                            android:textStyle="bold"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:orientation="vertical">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/appVersionBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/version"
                        android:textSize="18sp"
                        app:icon="@drawable/ic_round_info_24"
                        app:iconPadding="16dp"
                        app:iconSize="24dp"
                        android:textAlignment="textStart"
                        style="@style/Widget.Material3.Button.TextButton"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/sourceCodeBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/source_code"
                        android:textSize="18sp"
                        app:icon="@drawable/ic_round_code_24"
                        app:iconPadding="16dp"
                        app:iconSize="24dp"
                        android:textAlignment="textStart"
                        style="@style/Widget.Material3.Button.TextButton"/>
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:orientation="vertical">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/kirill_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:paddingHorizontal="16dp"
                        android:text="@string/kirill_borisenko"
                        android:textSize="18sp"
                        style="@style/Widget.Material3.Button.TextButton"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/ibragim_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:paddingHorizontal="16dp"
                        android:text="@string/ibragim_maltsagov"
                        android:textSize="18sp"
                        style="@style/Widget.Material3.Button.TextButton"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/mailBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="ibremminer837.dev@gmail.com"
                        android:textSize="18sp"
                        app:icon="@drawable/ic_round_alternate_email_24"
                        app:iconPadding="16dp"
                        app:iconSize="24dp"
                        android:textAlignment="textStart"
                        style="@style/Widget.Material3.Button.TextButton"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/vkGroupBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/we_are_on_vk"
                        android:textSize="18sp"
                        app:icon="@drawable/ic_round_public_24"
                        app:iconPadding="16dp"
                        app:iconSize="24dp"
                        android:textAlignment="textStart"
                        style="@style/Widget.Material3.Button.TextButton"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/otherAppsBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/other_apps"
                        android:textSize="18sp"
                        app:icon="@drawable/ic_round_apps_24"
                        app:iconPadding="16dp"
                        app:iconSize="24dp"
                        android:textAlignment="textStart"
                        style="@style/Widget.Material3.Button.TextButton"/>
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            app:cardCornerRadius="16dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingHorizontal="16dp"
                    android:text="@string/translate"
                    android:textSize="21sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingHorizontal="16dp"
                    android:text="@string/help_in_app_translation"
                    android:textSize="18sp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/translate_app_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start|center_vertical"
                    android:paddingHorizontal="16dp"
                    android:text="@string/translate_application"
                    android:textSize="18sp"
                    app:icon="@drawable/ic_round_translate_24"
                    style="@style/Widget.Material3.Button.TextButton"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

</FrameLayout>