<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView android:id="@+id/first_step"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="4dp"
    app:cardCornerRadius="16dp"
    app:cardUseCompatPadding="true"
    style="@style/Widget.Material3.CardView.Elevated"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:paddingTop="8dp"
            android:text="@string/throw_the_eye_of_end_and_follow_it"
            android:textSize="21sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/first_x2_coord_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingHorizontal="8dp"
            android:hint="@string/x_coord"
            app:hintAnimationEnabled="true"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:counterEnabled="true"
            app:counterMaxLength="12"
            app:helperText="@string/too"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/first_x2_coord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:inputType="number"
                android:digits="0123456789.-"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/first_z2_coord_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingHorizontal="8dp"
            android:hint="@string/z_coord"
            app:hintAnimationEnabled="true"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:counterEnabled="true"
            app:counterMaxLength="12"
            app:helperText="@string/too"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/first_z2_coord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:inputType="number"
                android:digits="0123456789.-"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/first_step2_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginBottom="8dp"
            android:padding="16dp"
            android:text="@string/next_step"
            android:textSize="18sp"
            android:textAllCaps="false"
            app:icon="@drawable/ic_round_navigate_next_24"
            app:iconGravity="textStart"
            style="@style/Widget.Material3.Button.TonalButton"/>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
